# simplepodcast-studio

./: .gitignore  LICENSE  README.md  components.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  dialog.json  fs.json  net.json  shell.json  store.json
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  open_url.rs  settings.rs
src/lib/components/common/: ThemeToggle.svelte
src/lib/components/layout/: AppHeader.svelte  Sidebar.svelte
src/lib/components/ui/: Button.svelte  Card.svelte  Input.svelte
src/lib/i18n/: es.json  index.ts
src/lib/stores/: router.svelte.ts  settings-types.ts  settings.svelte.ts
src/routes/: Dashboard.svelte  Editor.svelte  NotFound.svelte  Router.svelte  Settings.svelte
